# EPFL-interview

./: .pylintrc  Makefile  README.md  docker-compose.yml  openapi.json
ECHARTS_MAP_HTML_JS/: index.html  script.js  style.css
ansible/: deploy.yml  install.yml  inventory.ini
backend/: Dockerfile  Makefile  README.md  api.py  data.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6e55058bdd90_.py  831689a67e44_kodjo_change.py  88c82cc44214_create_connection_panel_zone.py  8ab89d0379ae_update_connection.py  989b6f552169_create_connection_connection_global.py
backend/resslab_tools/: __init__.py  config.py  main.py
backend/resslab_tools/models/: __init__.py  api.py  database.py
backend/resslab_tools/routers/: connections.py  root.py
backend/resslab_tools/services/: database.py
backend/resslab_tools/utils/: fastapi.py
backend/tests/: test_resslab_tools.py
data/: README.md  additional_connections_located.csv  additional_connections_located__OLD.csv  connections_dictionary.csv  connections_located.csv  connections_located_new.csv
data/Global/: Chi_and_Uang_2002_DC2.csv  Engelhardt_et_al_2000_DBBW.csv  Engelhardt_et_al_2000_DBBWWPZ.csv  Engelhardt_et_al_2000_DBWW.csv
data/Panel_zone/: Chi_and_Uang_2002_DC2.csv  Ciutina_and_Dubina_2008_CP-IIPL-M.csv  Ciutina_and_Dubina_2008_CP-R-M.csv
frontend/: .eslintrc.js  Makefile  README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.ts  shims-custom.d.ts
frontend/src/backend/: api.ts  base.ts  common.ts  configuration.ts  index.ts
(+19 files in other folders)
