[tool.poetry]
name = "resslab-tools"
version = "0.1.0"
description = ""
authors = ["David Tang <david.tang@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
dynaconf = "^3.1.7"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.27"}
fastapi-pagination = {extras = ["async_sqlalchemy"], version = "^0.9.1"}
asyncpg = "^0.24.0"
uvicorn = "^0.15.0"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
uvicorn = "^0.15.0"
pylint = "^2.11.1"
pylint-quotes = "^0.2.3"
python-dotenv = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
